--- a/static/style.css
+++ b/static/style.css
@@ -11,34 +11,39 @@ body {
     font-family: 'Philosopher', sans-serif;
     font-size: 1rem;
 }
-
+h1{
+    margin-top: 0;
+    margin-bottom: 0;
+}
 header {
-    border: #8E8D8A groove;
-    color: #E85A4F;
+    background-color: #D8C3A5;
     display: flex;
-    justify-content: space-between;
+    height: fit-content;
 }
 
-.logo {
-    display: flex;
-    margin-right: auto;
-    align-items: center;
-    font-size: 100%;
+ul {
+    list-style-type: none;
+    margin-top: 0;
+    height: fit-content;
 }
 
-.title {
-    font-size: xx-large;
-    margin: 0 auto;
-    font-size: 100%;
+li {
+    float: right;
+    
 }
 
-nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* Centre verticalement */
-    justify-content: center;
-    /* Centre horizontalement */
-    margin-left: auto;
-    font-size: 100%;
+li a {
+    display: block;
+    color: #333;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #c54949;
+    color: rgb(255, 255, 255);
+}
+.logo{
+    width: 80%;
 }
