--- a/templates/base.html
+++ b/templates/base.html
@@ -15,16 +15,14 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Logo</h1>
+            <h1 id="logo">Logo</h1>
         </div>
-        <div class="title">
-            <h1>Mangas</h1>
-        </div>
-        <nav>
+        <nav class="logo">
             <ul class="HAC">
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="home">Home</a></li>
+                <li><a href="contact">Contact</a></li>
+                <li><a href="about">About</a></li>
+
             </ul>
         </nav>
     </header>
